Improvements and changes, fixes
